# VulkanStarter

./: .clang-uml  .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  LICENSE
HelloTriangles/: CMakeLists.txt  Makefile  main.cpp  shader.slang
HelloTriangles/shaders/: slang.spv
VulkanMakefileTest/: Makefile
VulkanTest/: VulkanTest.sln  VulkanTest.vcxproj  VulkanTest.vcxproj.filters
diagrams/: engine_classes.puml  engine_classes_all.puml
include/: tiny_obj_loader.h  vulkan_pch.h
shaders/PBR/lights/: light_input_structures.glsl  light_mesh.frag  light_mesh.vert
shaders/compute/: sky.comp
src/: CMakeLists.txt  MaterialSystem.cpp  MaterialSystem.h  PBREngine.cpp  camera.cpp  main.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_engine.h  vk_images.cpp  vk_loader.cpp  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
src/rgraph/: IFeature.h  RendergraphBuilder.h
src/sgraph/: Scenegraph.cpp  ScenegraphStructs.cpp
vulkan-guide/: CMakeLists.txt
vulkan-guide/scenegraphs/: test-scenegraph.txt
vulkan-guide/shaders/: gradient.comp  input_structures.glsl  sky.comp  tex_image.frag
vulkan-guide/shaders/PBR/: input_structures.glsl  mesh.frag
vulkan-guide/shaders/basic/: colored_triangle.vert
vulkan-guide/src/: CMakeLists.txt  GPUResourceAllocator.cpp  GPUResourceAllocator.h  MaterialSystem.cpp  MaterialSystem.h  PBREngine.cpp  PBREngine.h  Scenegraphs.cpp  Scenegraphs.h  camera.cpp  camera.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
(+29 files in other folders)
